--- a/src/stylus/style.styl
+++ b/src/stylus/style.styl
@@ -9,6 +9,7 @@
 		li {
 			display:none;
 			font-size:32px;
+			line-height:40px;
 			&:first-child {
 				display:block;
 			}
@@ -32,6 +33,15 @@
 			&:hover {
 				opacity:.8;
 			}
+		}
+	}
+	.result {
+		.hand {
+			margin-bottom:20px;
+			font-size:32px;
+		}
+		.comment {
+			font-size:16px;
 		}
 	}
 }
